--- a/src/pages/SingleBlog/style.scss
+++ b/src/pages/SingleBlog/style.scss
@@ -1,4 +1,4 @@
-.loader-blogs svg {
+.loader-single-blog svg {
     width: 3.25em;
     transform-origin: center;
     animation: rotate4 2s linear infinite;
