added loader to profile page

--- a/src/pages/Profile/style.scss
+++ b/src/pages/Profile/style.scss
@@ -1,11 +1,50 @@
-
-
-.search{
+.search {
     border: none !important;
     outline: none !important;
     appearance: none !important;
-    &:focus{
+
+    &:focus {
         border: none !important;
         outline: none !important;
+    }
+}
+
+
+
+.loader-single-blog svg {
+    width: 3.25em;
+    transform-origin: center;
+    animation: rotate4 2s linear infinite;
+}
+
+circle {
+    fill: none;
+    stroke: hsl(214, 97%, 59%);
+    stroke-width: 2;
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+    stroke-linecap: round;
+    animation: dash4 1.5s ease-in-out infinite;
+}
+
+@keyframes rotate4 {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dash4 {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+
+    50% {
+        stroke-dasharray: 90, 200;
+        stroke-dashoffset: -35px;
+    }
+
+    100% {
+        stroke-dashoffset: -125px;
     }
 }
